Changes in Version 0.2-2

    o    Improvement for 'panel_coef': Points and lines surpassing
         the boxes are now suppressed.

    o    Added variable centering as default for split selection.

    o    Redefinition of tuning parameters for 'tvcm' were. The main 
         tuning parameter is now 'cp'. See the help of 'tvcm' and 
         'tvcm_control' for details. 

    o    Additional 'nimpute' argument for 'tvcm_control()'.

    o    Added detail section to the help page of 'tvcm_control'

    o    Removed AIC table from 'print.tvcm' (AIC and BIC seem not
         relevant measures for models fitted by 'tvcm').

    o    Added 'PL' data set.

    o    Removed bug for numeric estimation of covariance of 'olmm'
         objects.


Changes in Version 0.2-1

    o    First CRAN release.

    o    'tvcm' and 'fvcm' allow for multiple 'vc' terms, i.e. 
         coefficient-specific partitions

    o    Complete revision of syntaxes, argument names and  default 
         parameters. R commands for the former version 0.1-14 are 
         hardly compatibel. Please contact <rbuergin@gmx.ch> 
         in case of questions.

    o    The default splitting criterion of 'tvcm' was changed from 
         (old) coefficient constancy tests combined with greedy loss 
         minimization to (new) exhaustive greedy loss minimization. Splitting 
         based on the (old) requires to set the argument 'sctest = TRUE' in 
         'tvcm_control'

     o	 The greedy loss reduction minimization stage of 'tvcm' does now 
         fixate coefficients which are not splitted at the estimates of 
         the current model. The technique intends acceleration.

     o   Cross-validation is now integrated in the 'tvcm' function.

     o   'cvloss' and 'prune' are parallelized using the 'parallel' package.