@@ -109,6 +109,7 @@ S3method(print, otsplot)
 ## Exported methods for 'tvcm' class
 S3method(coef, tvcm)
 S3method(coefficients, tvcm)
+S3method(depth, tvcm)
 S3method(cvloss, tvcm)
 S3method(plot, cvloss.tvcm)
 S3method(print, cvloss.tvcm)
@@ -135,3 +136,4 @@ S3method(splitpath, tvcm)
 S3method(print, splitpath.tvcm)
 S3method(summary, tvcm)
 S3method(weights, tvcm)
+S3method(width, tvcm)
