@@ -1,0 +1,9 @@
+#ifndef VCRPART_TVCM_H
+#define VCRPART_TVCM_H
+
+#include <R.h>
+#include <Rdefines.h>
+
+SEXP tvcm_nomsplits(SEXP zdlev);
+
+#endif
